# KGTrading

./: CMakeLists.txt  README  README.md
algorithms/: baseAlgo.h
feedhandlers/: feedhandler.h
include/: marketmgr.h
kglib/: mmaputil.h
kglib/mmap/: mmaputil.h
kglib/net/: epoller.h  loop.h  pipemgr.h
kglib/orderbook/: book.h  order.h
logger/: logger.h
test/: test.cpp
